minibasic/parser/parser.output
Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: %empty
    3          | stmt stmt_list

    4 stmt: "print" expr
    5     | "let" T_id '=' expr
    6     | "begin" stmt_list "end"
    7     | "for" expr "do" stmt
    8     | "if" expr "then" stmt

    9 expr: T_id
   10     | T_const
   11     | '(' expr ')'
   12     | expr '+' expr
   13     | expr '-' expr
   14     | expr '*' expr
   15     | expr '/' expr
   16     | expr '%' expr
   17     | '-' expr


Terminals, with rules where they appear

$end (0) 0
'%' (37) 16
'(' (40) 11
')' (41) 11
'*' (42) 14
'+' (43) 12
'-' (45) 13 17
'/' (47) 15
'=' (61) 5
error (256)
"for" (258) 7
"print" (259) 4
"let" (260) 5
"if" (261) 8
"then" (262) 8
"do" (263) 7
"begin" (264) 6
"end" (265) 6
T_id (266) 5 9
T_const (267) 10
UMINUS (268)


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
program (23)
    on left: 1, on right: 0
stmt_list (24)
    on left: 2 3, on right: 1 3 6
stmt (25)
    on left: 4 5 6 7 8, on right: 3 7 8
expr (26)
    on left: 9 10 11 12 13 14 15 16 17, on right: 4 5 7 8 11 12 13
    14 15 16 17


State 0

    0 $accept: . program $end

    "for"    shift, and go to state 1
    "print"  shift, and go to state 2
    "let"    shift, and go to state 3
    "if"     shift, and go to state 4
    "begin"  shift, and go to state 5

    $default  reduce using rule 2 (stmt_list)

    program    go to state 6
    stmt_list  go to state 7
    stmt       go to state 8


State 1

    7 stmt: "for" . expr "do" stmt

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 13


State 2

    4 stmt: "print" . expr

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 14


State 3

    5 stmt: "let" . T_id '=' expr

    T_id  shift, and go to state 15


State 4

    8 stmt: "if" . expr "then" stmt

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 16


State 5

    6 stmt: "begin" . stmt_list "end"

    "for"    shift, and go to state 1
    "print"  shift, and go to state 2
    "let"    shift, and go to state 3
    "if"     shift, and go to state 4
    "begin"  shift, and go to state 5

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 17
    stmt       go to state 8


State 6

    0 $accept: program . $end

    $end  shift, and go to state 18


State 7

    1 program: stmt_list .

    $default  reduce using rule 1 (program)


State 8

    3 stmt_list: stmt . stmt_list

    "for"    shift, and go to state 1
    "print"  shift, and go to state 2
    "let"    shift, and go to state 3
    "if"     shift, and go to state 4
    "begin"  shift, and go to state 5

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 19
    stmt       go to state 8


State 9

    9 expr: T_id .

    $default  reduce using rule 9 (expr)


State 10

   10 expr: T_const .

    $default  reduce using rule 10 (expr)


State 11

   17 expr: '-' . expr

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 20


State 12

   11 expr: '(' . expr ')'

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 21


State 13

    7 stmt: "for" expr . "do" stmt
   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr

    "do"  shift, and go to state 22
    '+'   shift, and go to state 23
    '-'   shift, and go to state 24
    '*'   shift, and go to state 25
    '/'   shift, and go to state 26
    '%'   shift, and go to state 27


State 14

    4 stmt: "print" expr .
   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27

    $default  reduce using rule 4 (stmt)


State 15

    5 stmt: "let" T_id . '=' expr

    '='  shift, and go to state 28


State 16

    8 stmt: "if" expr . "then" stmt
   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr

    "then"  shift, and go to state 29
    '+'     shift, and go to state 23
    '-'     shift, and go to state 24
    '*'     shift, and go to state 25
    '/'     shift, and go to state 26
    '%'     shift, and go to state 27


State 17

    6 stmt: "begin" stmt_list . "end"

    "end"  shift, and go to state 30


State 18

    0 $accept: program $end .

    $default  accept


State 19

    3 stmt_list: stmt stmt_list .

    $default  reduce using rule 3 (stmt_list)


State 20

   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr
   17     | '-' expr .

    $default  reduce using rule 17 (expr)


State 21

   11 expr: '(' expr . ')'
   12     | expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27
    ')'  shift, and go to state 31


State 22

    7 stmt: "for" expr "do" . stmt

    "for"    shift, and go to state 1
    "print"  shift, and go to state 2
    "let"    shift, and go to state 3
    "if"     shift, and go to state 4
    "begin"  shift, and go to state 5

    stmt  go to state 32


State 23

   12 expr: expr '+' . expr

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 33


State 24

   13 expr: expr '-' . expr

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 34


State 25

   14 expr: expr '*' . expr

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 35


State 26

   15 expr: expr '/' . expr

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 36


State 27

   16 expr: expr '%' . expr

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 37


State 28

    5 stmt: "let" T_id '=' . expr

    T_id     shift, and go to state 9
    T_const  shift, and go to state 10
    '-'      shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 38


State 29

    8 stmt: "if" expr "then" . stmt

    "for"    shift, and go to state 1
    "print"  shift, and go to state 2
    "let"    shift, and go to state 3
    "if"     shift, and go to state 4
    "begin"  shift, and go to state 5

    stmt  go to state 39


State 30

    6 stmt: "begin" stmt_list "end" .

    $default  reduce using rule 6 (stmt)


State 31

   11 expr: '(' expr ')' .

    $default  reduce using rule 11 (expr)


State 32

    7 stmt: "for" expr "do" stmt .

    $default  reduce using rule 7 (stmt)


State 33

   12 expr: expr . '+' expr
   12     | expr '+' expr .
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr

    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27

    $default  reduce using rule 12 (expr)


State 34

   12 expr: expr . '+' expr
   13     | expr . '-' expr
   13     | expr '-' expr .
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr

    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27

    $default  reduce using rule 13 (expr)


State 35

   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   14     | expr '*' expr .
   15     | expr . '/' expr
   16     | expr . '%' expr

    $default  reduce using rule 14 (expr)


State 36

   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   15     | expr '/' expr .
   16     | expr . '%' expr

    $default  reduce using rule 15 (expr)


State 37

   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr
   16     | expr '%' expr .

    $default  reduce using rule 16 (expr)


State 38

    5 stmt: "let" T_id '=' expr .
   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   16     | expr . '%' expr

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27

    $default  reduce using rule 5 (stmt)


State 39

    8 stmt: "if" expr "then" stmt .

    $default  reduce using rule 8 (stmt)
